[gd_scene load_steps=12 format=1]

[ext_resource path="res://ref/themes/themeGame.thm" type="Theme" id=1]
[ext_resource path="res://core/Game/Game.gd" type="Script" id=2]
[ext_resource path="res://core/Controller/Controller.gd" type="Script" id=3]
[ext_resource path="res://core/HUD/HUD_core.gd" type="Script" id=4]
[ext_resource path="res://core/HUD/HUD_VelCon.gd" type="Script" id=5]
[ext_resource path="res://core/HUD/HUD_TargetInfo.gd" type="Script" id=6]
[ext_resource path="res://core/HUD/HUD_CollisionWarning.gd" type="Script" id=7]
[ext_resource path="res://core/HUD/SysCon.gd" type="Script" id=8]
[ext_resource path="res://core/HUD/MFD/MFD.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/graphics/red_crosshair.png" type="Texture" id=10]
[ext_resource path="res://core/World/World.tscn" type="PackedScene" id=11]

[node name="Game" type="TabContainer"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 32.0
margin/right = 0.0
margin/bottom = 0.0
tab_align = 2
tabs_visible = true
script/script = ExtResource( 2 )

[node name="Space" type="Tabs" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 4.0
margin/top = 30.0
margin/right = 4.0
margin/bottom = 4.0

[node name="Control" type="Node" parent="Space"]

script/script = ExtResource( 3 )

[node name="HUD" type="CanvasLayer" parent="Space/Control"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 4 )

[node name="CameraZoom" type="VSlider" parent="Space/Control/HUD"]

anchor/left = 1
anchor/right = 1
rect/min_size = Vector2( 16, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 32.0
margin/top = 64.0
margin/right = 16.0
margin/bottom = 192.0
range/min = 0.25
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false

[node name="VelCon" type="PanelContainer" parent="Space/Control/HUD"]

visibility/self_opacity = 0.25
visibility/blend_mode = 1
anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 208.0
margin/top = 168.0
margin/right = 16.0
margin/bottom = 12.0
script/script = ExtResource( 5 )
__meta__ = { "_editor_collapsed":true }

[node name="box" type="VBoxContainer" parent="Space/Control/HUD/VelCon"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = ExtResource( 1 )
margin/left = 4.0
margin/top = 8.0
margin/right = 188.0
margin/bottom = 152.0
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="Space/Control/HUD/VelCon/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 184.0
margin/bottom = 12.0
text = "VelCon"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Output" type="HBoxContainer" parent="Space/Control/HUD/VelCon/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 16.0
margin/right = 184.0
margin/bottom = 113.0
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Lin" type="VBoxContainer" parent="Space/Control/HUD/VelCon/box/Output"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 86.0
margin/bottom = 97.0
alignment = 0

[node name="Speed" type="HBoxContainer" parent="Space/Control/HUD/VelCon/box/Output/Lin"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 86.0
margin/bottom = 12.0
alignment = 0

[node name="Prefix" type="Label" parent="Space/Control/HUD/VelCon/box/Output/Lin/Speed"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 26.0
margin/bottom = 12.0
text = "LV"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Value" type="Label" parent="Space/Control/HUD/VelCon/box/Output/Lin/Speed"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 30.0
margin/top = 0.0
margin/right = 56.0
margin/bottom = 12.0
text = "0.00"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Suffix" type="Label" parent="Space/Control/HUD/VelCon/box/Output/Lin/Speed"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 60.0
margin/top = 0.0
margin/right = 86.0
margin/bottom = 12.0
text = "m/s"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Vector" type="PanelContainer" parent="Space/Control/HUD/VelCon/box/Output/Lin"]

visibility/blend_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 16.0
margin/right = 86.0
margin/bottom = 81.0

[node name="Label" type="Label" parent="Space/Control/HUD/VelCon/box/Output/Lin"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 85.0
margin/right = 86.0
margin/bottom = 97.0
text = "Linear"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator" type="VSeparator" parent="Space/Control/HUD/VelCon/box/Output"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 0.0
margin/right = 93.0
margin/bottom = 97.0

[node name="Rot" type="VBoxContainer" parent="Space/Control/HUD/VelCon/box/Output"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 97.0
margin/top = 0.0
margin/right = 184.0
margin/bottom = 97.0
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Speed" type="HBoxContainer" parent="Space/Control/HUD/VelCon/box/Output/Rot"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 87.0
margin/bottom = 12.0
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Prefix" type="Label" parent="Space/Control/HUD/VelCon/box/Output/Rot/Speed"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 26.0
margin/bottom = 12.0
text = "AV"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Value" type="Label" parent="Space/Control/HUD/VelCon/box/Output/Rot/Speed"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 30.0
margin/top = 0.0
margin/right = 56.0
margin/bottom = 12.0
text = "0.00"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Suffix" type="Label" parent="Space/Control/HUD/VelCon/box/Output/Rot/Speed"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 60.0
margin/top = 0.0
margin/right = 87.0
margin/bottom = 12.0
text = "d/s"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Vector" type="PanelContainer" parent="Space/Control/HUD/VelCon/box/Output/Rot"]

visibility/blend_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 16.0
margin/right = 87.0
margin/bottom = 81.0

[node name="Label" type="Label" parent="Space/Control/HUD/VelCon/box/Output/Rot"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 85.0
margin/right = 87.0
margin/bottom = 97.0
text = "Angular"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="Space/Control/HUD/VelCon/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 117.0
margin/right = 184.0
margin/bottom = 120.0

[node name="Origin" type="HBoxContainer" parent="Space/Control/HUD/VelCon/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 124.0
margin/right = 184.0
margin/bottom = 144.0
alignment = 0

[node name="Label" type="Label" parent="Space/Control/HUD/VelCon/box/Origin"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 4.0
margin/right = 36.0
margin/bottom = 16.0
text = "Global"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Switch" type="CheckButton" parent="Space/Control/HUD/VelCon/box/Origin"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 116.0
margin/bottom = 20.0
toggle_mode = true
flat = false
align = 0

[node name="Label1" type="Label" parent="Space/Control/HUD/VelCon/box/Origin"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 120.0
margin/top = 4.0
margin/right = 174.0
margin/bottom = 16.0
text = "TRelative"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Target" type="PanelContainer" parent="Space/Control/HUD"]

visibility/visible = false
visibility/self_opacity = 0.25
visibility/blend_mode = 1
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 16.0
margin/top = 240.0
margin/right = 200.0
margin/bottom = 12.0
script/script = ExtResource( 6 )
__meta__ = { "_editor_collapsed":true }

[node name="box" type="VBoxContainer" parent="Space/Control/HUD/Target"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 8.0
margin/right = 180.0
margin/bottom = 224.0
alignment = 0

[node name="Label" type="Label" parent="Space/Control/HUD/Target/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 176.0
margin/bottom = 12.0
text = "TargetInfo"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Icon" type="CenterContainer" parent="Space/Control/HUD/Target/box"]

rect/min_size = Vector2( 90, 90 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 16.0
margin/right = 176.0
margin/bottom = 106.0
use_top_left = false

[node name="Base" type="Control" parent="Space/Control/HUD/Target/box/Icon"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 88.0
margin/top = 45.0
margin/right = 88.0
margin/bottom = 45.0

[node name="Sprite" type="Sprite" parent="Space/Control/HUD/Target/box/Icon/Base"]

[node name="TargetName" type="Label" parent="Space/Control/HUD/Target/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 110.0
margin/right = 176.0
margin/bottom = 122.0
text = "[name]"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Output" type="HBoxContainer" parent="Space/Control/HUD/Target/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 126.0
margin/right = 176.0
margin/bottom = 216.0
alignment = 0

[node name="Labels" type="VBoxContainer" parent="Space/Control/HUD/Target/box/Output"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 86.0
margin/bottom = 90.0
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="Distance" type="Label" parent="Space/Control/HUD/Target/box/Output/Labels"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 86.0
margin/bottom = 12.0
text = "Distance"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LinVel" type="Label" parent="Space/Control/HUD/Target/box/Output/Labels"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 16.0
margin/right = 86.0
margin/bottom = 28.0
text = "LinVel"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LinVelR" type="Label" parent="Space/Control/HUD/Target/box/Output/Labels"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 32.0
margin/right = 86.0
margin/bottom = 44.0
text = "LinVelR"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Heading" type="Label" parent="Space/Control/HUD/Target/box/Output/Labels"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 48.0
margin/right = 86.0
margin/bottom = 60.0
text = "Heading"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HeadingR" type="Label" parent="Space/Control/HUD/Target/box/Output/Labels"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 64.0
margin/right = 86.0
margin/bottom = 76.0
text = "HeadingR"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Values" type="VBoxContainer" parent="Space/Control/HUD/Target/box/Output"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 90.0
margin/top = 0.0
margin/right = 176.0
margin/bottom = 90.0
alignment = 0

[node name="Distance" type="Label" parent="Space/Control/HUD/Target/box/Output/Values"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 86.0
margin/bottom = 12.0
text = "nil"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LinVel" type="Label" parent="Space/Control/HUD/Target/box/Output/Values"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 16.0
margin/right = 86.0
margin/bottom = 28.0
text = "nil"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LinVelR" type="Label" parent="Space/Control/HUD/Target/box/Output/Values"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 32.0
margin/right = 86.0
margin/bottom = 44.0
text = "nil"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Heading" type="Label" parent="Space/Control/HUD/Target/box/Output/Values"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 48.0
margin/right = 86.0
margin/bottom = 60.0
text = "nil"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HeadingR" type="Label" parent="Space/Control/HUD/Target/box/Output/Values"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 64.0
margin/right = 86.0
margin/bottom = 76.0
text = "nil"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="UpdateTime" type="Timer" parent="Space/Control/HUD"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = true

[node name="CollisionWarning" type="PanelContainer" parent="Space/Control/HUD"]

visibility/self_opacity = 0.25
visibility/blend_mode = 1
anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 224.0
margin/top = 64.0
margin/right = 40.0
margin/bottom = 114.0
script/script = ExtResource( 7 )
__meta__ = { "_editor_collapsed":true }

[node name="box" type="VBoxContainer" parent="Space/Control/HUD/CollisionWarning"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 8.0
margin/right = 180.0
margin/bottom = 46.0
alignment = 0

[node name="Label" type="Label" parent="Space/Control/HUD/CollisionWarning/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 176.0
margin/bottom = 12.0
text = "COLLISION WARNING"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBox" type="SpinBox" parent="Space/Control/HUD/CollisionWarning/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 16.0
margin/right = 176.0
margin/bottom = 38.0
range/min = 5.0
range/max = 120.0
range/step = 1.0
range/page = 0.0
range/value = 30.0
range/exp_edit = false
range/rounded = true
editable = false
prefix = "warn at"
suffix = "s"

[node name="???" type="Button" parent="Space/Control/HUD"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 256.0
margin/top = 144.0
margin/right = 232.0
margin/bottom = 168.0
toggle_mode = false
text = "\?"
flat = false

[node name="SysCon" type="PanelContainer" parent="Space/Control/HUD"]

visibility/self_opacity = 0.25
visibility/blend_mode = 1
anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 224.0
margin/top = 128.0
margin/right = 40.0
margin/bottom = 178.0
script/script = ExtResource( 8 )
__meta__ = { "_editor_collapsed":true }

[node name="box" type="VBoxContainer" parent="Space/Control/HUD/SysCon"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 8.0
margin/right = 180.0
margin/bottom = 46.0
alignment = 0

[node name="Label" type="Label" parent="Space/Control/HUD/SysCon/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 176.0
margin/bottom = 12.0
text = "SysCon"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="Space/Control/HUD/SysCon/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 16.0
margin/right = 176.0
margin/bottom = 19.0

[node name="Systems" type="VBoxContainer" parent="Space/Control/HUD/SysCon/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 23.0
margin/right = 176.0
margin/bottom = 38.0
alignment = 0

[node name="MFDPanelL" parent="Space/Control/HUD" instance=ExtResource( 9 )]

[node name="MFDPanelR" parent="Space/Control/HUD" instance=ExtResource( 9 )]

anchor/left = 1
anchor/right = 1
margin/left = 300.0
margin/right = 32.0

[node name="ProMark" type="Sprite" parent="Space/Control/HUD"]

visibility/self_opacity = 0.75
visibility/blend_mode = 1
texture = ExtResource( 10 )

[node name="Viewport" type="Viewport" parent="Space"]

rect = Rect2( 0, 0, 1016, 534 )
own_world = false
world = null
transparent_bg = false
render_target/enabled = false
render_target/v_flip = false
render_target/clear_on_new_frame = true
render_target/filter = false
render_target/gen_mipmaps = false
render_target/update_mode = 2
audio_listener/enable_2d = false
audio_listener/enable_3d = false
physics/object_picking = true
gui/disable_input = false

[node name="World" parent="Space/Viewport" instance=ExtResource( 11 )]

[node name="Help" type="AcceptDialog" parent="Space"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 356.0
margin/top = 98.0
margin/right = 204.0
margin/bottom = 194.0
popup/exclusive = false
window/title = "~Help!~"
dialog/text = "Controls:\n\nMain Thrust (fast):\nSpace:\t\tPrograde (forward) thrust\nC: \t\t\t\tRetrograde(backward) thrust\n\nReaction Control System (RCS) (slow corrective thrust):\nW:\t\t\t\tPrograde RCS\nS:\t\t\t\t\tRetrograde RCS\nA:\t\t\t\t\tLeft RCS\nD:\t\t\t\tRight RCS\n\nDocking Functions (line your red square up with a white square)\nF:\t\t\t\t\tDock with target\nG:\t\t\t\tUndock with target\n"
dialog/hide_on_ok = true

[node name="Ship" type="Tabs" parent="."]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 4.0
margin/top = 30.0
margin/right = 4.0
margin/bottom = 4.0
__meta__ = { "_editor_collapsed":true }

[node name="ShipTabs" type="TabContainer" parent="Ship"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
tab_align = 1
tabs_visible = true

[node name="Vessel" type="Tabs" parent="Ship/ShipTabs"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 31.0
margin/right = 4.0
margin/bottom = 4.0

[node name="Cargo" type="Tabs" parent="Ship/ShipTabs"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 31.0
margin/right = 4.0
margin/bottom = 4.0

[node name="Missions" type="Tabs" parent="Ship/ShipTabs"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 31.0
margin/right = 4.0
margin/bottom = 4.0

[node name="Comm" type="Tabs" parent="Ship/ShipTabs"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 31.0
margin/right = 4.0
margin/bottom = 4.0

[node name="Map" type="Tabs" parent="."]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 4.0
margin/top = 30.0
margin/right = 4.0
margin/bottom = 4.0

[node name="Options" type="Tabs" parent="."]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 4.0
margin/top = 30.0
margin/right = 4.0
margin/bottom = 4.0

[connection signal="value_changed" from="Space/Control/HUD/CameraZoom" to="Space/Control/HUD" method="_on_CameraZoom_value_changed"]

[connection signal="timeout" from="Space/Control/HUD/UpdateTime" to="Space/Control/HUD" method="_on_UpdateTime_timeout"]

[connection signal="pressed" from="Space/Control/HUD/???" to="." method="_on_helpbutton_pressed"]


